# Transmission_protocols

./: .gitignore  CMakeLists.txt  README.md  env.sh  run
TCP/: CMakeLists.txt
TCP/client/: client.cpp
TCP/server/: server.cpp
UDP/: CMakeLists.txt
UDP/client/: client.cpp
UDP/includes/: socket.hpp
UDP/server/: main.cpp  server.cpp
config/: tcp_client.json  tcp_server.json  udp_client.json  udp_server.json
includes/: config.hpp
